[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/JigsawGameScene/Nodes/JigsawPiece.gd" type="Script" id=1]

[node name="JigsawPiece" type="Control"]
margin_right = 100.0
margin_bottom = 100.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="on_mouse_exited"]
